--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node public/server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,7 +15,6 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "socket.io": "^4.7.4"
